tests/pass/ModAssign.java
package pass;

public class ModAssign {
  public int modassign(int x, int y) {
    return 5; // x %= y;
  }
}
