tests/fail/MultAssign.java
package fail;

import java.lang.System;

public class MultAssign {

  public static void main(String[] args ) {
    int x = 5;
    x *= 5;
  }

}
